# tiplink-mpc

./: .gitignore  01-implenting-backend-for-tiplink.md  02-frontend-implementation.md  README_FOR_MAINNET.md
backend/: Cargo.toml  build.rs  test_local.sh
backend/migrations/: 0001_initial_schema.sql  0002_mpc_shares.sql
backend/src/: main.rs
backend/src/api/: mod.rs
backend/src/db/: mod.rs
backend/src/indexer/: mod.rs  worker.rs
backend/src/mpc/: mod.rs  two_party.rs
backend/test_bin/: Cargo.toml
backend/test_bin/src/: main.rs
crates/my-mpc/: Cargo.toml  test_gf  test_gf.rs
crates/my-mpc/inspirations/: README.md
crates/my-mpc/src/: delivery.rs  error.rs  lib.rs  message.rs  mpc.rs  party.rs  protocol.rs
crates/my-mpc/src/delivery/: mock.rs
crates/my-mpc/src/mpc/: engine.rs
crates/solana-indexer/: Cargo.toml
crates/solana-indexer/idls/: jupiter_v6.json
crates/solana-indexer/src/: lib.rs  main.rs
crates/solana-indexer/src/adapters/: mod.rs
crates/solana-indexer/src/adapters/outbound/: mod.rs  postgres.rs
crates/solana-indexer/src/adapters/parsers/: Jupiter_vixen.rs  mod.rs  pump_fun.rs  raydium_amm.rs  spl_token.rs  vixen_utils.rs
crates/solana-indexer/src/domain/: constants.rs  mod.rs  models.rs  tokenizer.rs
crates/solana-indexer/src/infrastructure/buffer/: memory.rs
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
tiplink-client-wasm/: Cargo.toml
tiplink-client-wasm/pkg/: package.json  tiplink_client_wasm.d.ts  tiplink_client_wasm.js  tiplink_client_wasm_bg.js  tiplink_client_wasm_bg.wasm  tiplink_client_wasm_bg.wasm.d.ts
tiplink-client-wasm/src/: lib.rs
