[package]
name = "tiplink-client-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
curve25519-dalek = { version = "4.1", features = ["rand_core"] }
rand = { version = "0.8" }
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
sha2 = "0.10"
bs58 = "0.5"

[profile.release]
opt-level = "s"
lto = true
