[package]
name = "my-solana-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
bs58 = "0.5.1"
bytes = "1.11.0"
chrono = {version = "0.4.42",features = ["serde"]}
dotenv = "0.15.0"
prost = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
sqlx = {version = "0.8.6", features = ["postgres","runtime-tokio-native-tls","bigdecimal","chrono","macros"]}
thiserror = "2.0.17"
tokio = {version = "1.48.0",features = ["full"]}
tokio-stream = "0.1.17"
tonic = {version = "0.14.2",  features = ["tls-ring","tls-webpki-roots"]}
rustls = "0.23"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.22",features = ["env-filter"]}
yellowstone-grpc-proto = "=10.1.1"
bigdecimal = "0.4.10"
solana-client = "3.1.5"
solana-sdk = "3.0.0"
bincode = "=1.3.3"
futures = "0.3.31"
teloxide = "0.17.0"
borsh = "1.6.0"
# yellowstone-vixen-parser = { version = "0.5.1" }
# yellowstone-vixen-proc-macro = { version = "0.6.0" }
yellowstone-vixen-core = { git = "https://github.com/rpcpool/yellowstone-vixen" }

# 2. Parser: Required because the macro generates code using this crate
yellowstone-vixen-parser = { git = "https://github.com/rpcpool/yellowstone-vixen" }

# 3. Macro: Generates the code
yellowstone-vixen-proc-macro = { git = "https://github.com/rpcpool/yellowstone-vixen" }
solana-transaction-status-client-types = "4.0.3"
